force-app/main/default/objects/Project__c/fields/Carbon_Balance__c.field-meta.xml
<CustomField>
    <fullName>Carbon_Balance__c</fullName>
    <label>Carbon Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>