force-app/main/default/objects/Project__c/fields/Emission_Covered__c.field-meta.xml
<CustomField>
    <fullName>Emission_Covered__c</fullName>
    <label>Emission Covered</label>
    <summarizedField>Offset__c.Amount__c</summarizedField>
    <summaryForeignKey>Offset__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>