force-app/main/default/objects/Project__c/fields/Target_Emission__c.field-meta.xml
<CustomField>
    <fullName>Target_Emission__c</fullName>
    <label>Target Emission</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>