force-app/main/default/objects/Project__c/fields/Total_Emission__c.field-meta.xml
<CustomField>
    <fullName>Total_Emission__c</fullName>
    <label>Total Emission</label>
    <summarizedField>Emission__c.Actual_Emission__c</summarizedField>
    <summaryForeignKey>Emission__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>